"#" items refer to tickets. See <http://dev.openguides.org/report/9> for details.

More detailed changelogs can be found at
http://dev.openguides.org/log/trunk

0.60
        Use full URLs for all links in navbar, so people can INCLUDE navbar.tt
          in their own scripts.  (May revisit this later using "base href".)
        Added some stylesheet hooks to newpage.tt; see README.CSS for details.
        Documented the stylesheet hooks in the admin interface (see README.CSS)
        Bugfix: uninitialized variable warning in script_url
        Bugfix: Make sure clean target works

0.59    25 March 2007
        Move preview_node() and edit_node() from wiki.cgi into OpenGuides.pm
        Remove edit_conflict.tt - use edit_form.tt instead to reduce
          duplication.
        Make sure to always pass the config object into the templates.
        Add some extra test utilities to OpenGuides::Test
        Allow Guide admins to control the content of autocreated nodes (#47).
        Let people add name of copyright holder, licence URL, and info page
          URL for node images (#179).
        Add config option to omit recent changes from home page.
        Split out "modules" from navbar.tt into separate templates navbar_*.tt
          to make it easier for people to change the order in a custom template
        Add a new div to wrap the entire body; also, use header.tt in
          home_node.tt instead of copy/paste.
        Add a new div for the atom/RSS feed links on the recent changes page.
        Add config option to place content above navbar in HTML.
        Add config option to suppress inline maps on geotagged nodes.
        Add support for custom template to add to page <head> (#191).
        Fix preferences to take notice of users turning off inline Google maps.
        Add option to include Google Analytics.
        Fix "Link to this page" on index maps to remember the map type and
          the thing it's indexing (#190).