@@ -85,9 +85,7 @@ eval {
                             format => $format,
                           );
     } elsif ($action eq 'random') {
-        my @nodes = $wiki->list_all_nodes();
-        $node = $nodes[int(rand(scalar(@nodes) + 1)) + 1];
-        print $guide->redirect_to_node($node);
+        print $guide->display_random_page;
     } elsif ($action eq 'find_within_distance') {
         $guide->find_within_distance(
                                       id => $node,
