@@ -4,6 +4,8 @@ More detailed changelogs can be found at
 http://dev.openguides.org/log/trunk
 
 0.60
+        Move random page functionality from wiki.cgi into OpenGuides.pm and
+          add some tests.
         Use full URLs for all links in navbar, so people can INCLUDE navbar.tt
           in their own scripts.  (May revisit this later using "base href".)
         Added some stylesheet hooks to newpage.tt; see README.CSS for details.
